bk_ida/bzip2ida/c3/handle_compress
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:974:12: error: expected expression
*( _OWORD *)&state->inUse[16] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:974:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[16] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:975:12: error: expected expression
*( _OWORD *)&state->inUse[32] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:975:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[32] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:976:12: error: expected expression
*( _OWORD *)&state->inUse[48] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:976:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[48] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:977:12: error: expected expression
*( _OWORD *)&state->inUse[64] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:977:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[64] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:978:12: error: expected expression
*( _OWORD *)&state->inUse[80] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:978:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[80] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:979:12: error: expected expression
*( _OWORD *)&state->inUse[96] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:979:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[96] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:980:12: error: expected expression
*( _OWORD *)&state->inUse[112] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:980:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[112] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:981:12: error: expected expression
*( _OWORD *)&state->inUse[128] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:981:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[128] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:982:12: error: expected expression
*( _OWORD *)&state->inUse[144] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:982:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[144] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:983:12: error: expected expression
*( _OWORD *)&state->inUse[160] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:983:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[160] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:984:12: error: expected expression
*( _OWORD *)&state->inUse[176] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:984:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[176] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:985:12: error: expected expression
*( _OWORD *)&state->inUse[192] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:985:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[192] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:986:12: error: expected expression
*( _OWORD *)&state->inUse[208] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:986:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[208] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:987:12: error: expected expression
*( _OWORD *)&state->inUse[224] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:987:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[224] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:988:12: error: expected expression
*( _OWORD *)&state->inUse[240] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:988:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&state->inUse[240] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:989:12: error: expected expression
*( _OWORD *)state->inUse = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/bzlib.c:989:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)state->inUse = 0LL; 
   ^
32 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/handle_compress/src/obj/bzlib.o] Error 1
